--- a/style.css
+++ b/style.css
@@ -650,7 +650,7 @@ body {
         0 15px 30px rgba(0, 0, 0, 0.1),
         0 8px 16px rgba(124, 58, 237, 0.1),
         inset 0 0 0 1px rgba(255, 255, 255, 0.5);
-    background: linear-gradient(1deg, #8f1fffd0, #ffbf0096);
+    background-color: var(--roxo-escuro);
     margin: 0 auto;
     z-index: 2;
 }
